<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.InicioSesion">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

    </ScrollView>

    <Button
        android:id="@+id/btnRegistrar"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/btnOlvidar"
        android:layout_marginTop="20sp"
        android:background="#f8d11c"
        android:onClick="registrar"
        android:text="@string/IS_BU_signup"
        android:textColor="#181eff"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btnOlvidar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/divider2"
        android:background="#f8d11c"
        android:onClick="olvido"
        android:text="@string/IS_BU_forgetpass"
        android:textColor="#181eff"
        android:textSize="15dp" />

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="10sp"
        android:onClick="entrar"
        android:text="@string/IS_BU_enter"
        android:textColor="#345bff"
        android:textSize="20dp" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btnIngresar"
        android:background="#C8C9CB" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/lblTituloApp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/IS_TV_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#2c56c5"
            android:textSize="30dp" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblTituloApp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <EditText
                android:id="@+id/txtUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/IS_ET_nameuser"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/IS_ET_password"
                android:inputType="textPassword" />
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
